<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rove_arm_control</name>
  <version>0.0.0</version>
  <description>Package to control the rove kinova robotic arm using a 3d mouse</description>
  <maintainer email="capra@ens.etsmtl.ca">rove</maintainer>
  <license>MIT</license>

  <exec_depend>spacemouse_joy</exec_depend>
  <exec_depend>KinovaArmController</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
