<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rove_control_board</name>
  <version>0.0.0</version>
  <description>Implements communication with the control board through ROS</description>
  <maintainer email="capra@ens.etsmtl.ca">vscode</maintainer>
  <license>MIT</license>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <!-- <build_depend>python3-python-can</build_depend> -->
  <!-- <build_depend>python3-capra_micro_comm_py</build_depend> -->

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <!-- <exec_depend>python3-capra_micro_comm_py</exec_depend> -->
  
  
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <!-- <test_depend>python3-capra_micro_comm_py</test_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
