<?xml version="1.0"?>
<package format="3">
  <name>rove_insta_x4</name>
  <version>0.0.0</version>
  <description>ROS 2 node to split a 2880x1440 image into two 1440x1440 images and publish camera feed</description>
  <maintainer email="capra@ens.etsmtl.ca">Capra</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>usb_cam</depend>
  <depend>vision_opencv</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
