<?xml version="1.0"?>
<package format="3">
  <name>rove_manager</name>
  <version>0.0.0</version>
  <description>The rove_manager package</description>
  <maintainer email="capra@ens.etsmtl.ca">Capra</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
