<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rove_slam</name>
  <version>0.0.0</version>
  <description>SLAM package for rove</description>
  <maintainer email="capra@ens.etsmtl.ca">rove</maintainer>
  <license>TODO: License declaration</license>


  <build_depend>slam_toolbox</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>rtabmap</build_depend>
  <build_depend>rtabmap_odom</build_depend>
  <build_depend>rtabmap_slam</build_depend>
  <build_depend>rtabmap_viz</build_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
